# TrainningAlorithm

./: CMakeLists.txt  buildpyramid.cpp  buildpyramid.h  chinhhop.cpp  chinhhop.h  main.cpp  part2.cpp  part2.h  utils.cpp  utils.h
